@@ -7,6 +7,9 @@
    - deraadt@cvs.openbsd.org 2001/02/21 07:37:04
      [ssh-keyscan.c]
      inline -> __inline__, and some indent
+   - deraadt@cvs.openbsd.org 2001/02/21 09:05:54
+     [authfile.c]
+     improve fd handling
 
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
